feat: optimize log export