@@ -320,23 +320,33 @@ public class GuiPrefabs {
             button.setTextFill(COLOR_WHITE);
             button.setStyle("-fx-font-size:13px;-fx-background-color:" + toWebColor(COLOR_INFO));
             button.setOnAction(ev -> {
-                Logger.info("Dialog", "Ready to export logs");
+                Logger.debug("ErrorDialog", "Ready to export logs");
+
                 // Collect related log files
-                List<String> logList = new ArrayList<>();
-                logList.add(Logger.getLogFilePath());
+                List<String> pathList = new ArrayList<>();
+                pathList.add("%s.%d.log".formatted(Const.LogConfig.logDesktopPath, ProcessHandle.current().pid()));
                 if (e instanceof ProcessPool.UnexpectedExitCodeException exception)
-                    logList.add(String.format("%s.%d.log", Const.LogConfig.logCorePath, exception.getProcessId()));
-                logList.removeIf(logFile -> Files.notExists(Path.of(logFile)));
+                    pathList.add("%s.%d.log".formatted(Const.LogConfig.logCorePath, exception.getProcessId()));
+                pathList.removeIf(logFile -> Files.notExists(Path.of(logFile)));
+                if (pathList.isEmpty()) {
+                    Logger.info("ErrorDialog", "Logs not exported, no log file to export");
+                    return;
+                }
+
                 // Open file chooser
+                Logger.info("ErrorDialog", "Opening file chooser to export logs, " + pathList.size() + " files included");
                 FileChooser fileChooser = new FileChooser();
                 fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("Archives", "*.zip"));
                 fileChooser.setInitialFileName(LocalDateTime.now().format(DateTimeFormatter.ofPattern("'ArkPets_Logs_'yyyy-MM-dd-HH-mm-ss'.zip'")));
-                Logger.info("Dialog", "Opening file chooser to export logs");
                 File zipFile = fileChooser.showSaveDialog(parent.getScene().getWindow());
-                if (zipFile == null)
+                if (zipFile == null) {
+                    Logger.info("ErrorDialog", "Logs not exported, user cancelled");
                     return;
+                }
+
                 // Export log files
-                new ZipTask(parent, GuiTask.GuiTaskStyle.STRICT, zipFile.toString(), logList).start();
+                Logger.info("ErrorDialog", "Staring to export logs");
+                new ZipTask(parent, GuiTask.GuiTaskStyle.STRICT, zipFile.toString(), pathList).start();
                 disposeDialog(dialog);
             });
 
@@ -345,9 +355,9 @@ public class GuiPrefabs {
 
             if (e instanceof ProcessPool.UnexpectedExitCodeException) {
                 h2.setText("检测到桌宠异常退出");
-                h3.setText("桌宠运行时异常退出。如果该现象是在启动后立即发生的，可能是因为暂不支持该模型。您可以稍后重试或查看日志文件。");
+                h3.setText("桌宠运行时异常退出。您可以稍后重试或查看日志文件。");
             } else if (e instanceof FileNotFoundException) {
-                h3.setText("未找到某个文件或目录，请稍后重试。详细信息：");
+                h3.setText("未找到指定的文件或目录，请稍后重试。详细信息：");
             } else if (e instanceof NetUtils.HttpResponseCodeException ex) {
                 h2.setText("神经递质接收异常");
                 switch (ex.getType()) {
@@ -355,8 +365,11 @@ public class GuiPrefabs {
                     case CLIENT_ERROR -> {
                         h3.setText("可能是客户端引发的网络错误，详细信息：");
                         switch (ex.getCode()) {
+                            case 400 -> h3.setText("(400)非法请求。详细信息：");
+                            case 401 -> h3.setText("(401)访问未授权。详细信息：");
                             case 403 -> h3.setText("(403)访问被拒绝。详细信息：");
                             case 404 -> h3.setText("(404)找不到要访问的目标。详细信息：");
+                            case 429 -> h3.setText("(429)请求过于频繁。详细信息：");
                         }
                     }
                     case SERVER_ERROR -> {
@@ -364,6 +377,7 @@ public class GuiPrefabs {
                         switch (ex.getCode()) {
                             case 500 -> h3.setText("(500)服务器内部故障，请稍后重试。详细信息：");
                             case 502 -> h3.setText("(502)服务器网关故障，请稍后重试。详细信息：");
+                            case 503 -> h3.setText("(503)服务器暂不可用，请稍后重试。详细信息：");
                         }
                     }
                 }
